--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
         </div>
     </header>
-    <section>
+    <section class="branca">
         <div class="box1">
             <img src="img/icone1.png" alt="Ingrenagem">
             <h2>Editable Theme</h2>
@@ -40,6 +40,21 @@
             <h2>Reach Your Audience </h2>
             <p>Lorem ipsum dolor sit amet, minim graeci vim ne, cum cu prompta delicata. Vix ex dicit expetendis, ne mei tale placerat urbanitas.</p>
         </div>        
+    </section>
+    <section class="cinza">
+        <div class="section2">
+            <div class="paragrafo">
+                <h2>Get Notified Of Any Updates</h2>
+                <p id="plateral">Lorem ipsum dolor sit amet, minim graeci vim ne, cum cu prompta delicata. Vix ex dicit expetendis, ne mei tale placerat urbanitas.Lorem ipsum dolor sit amet, minim graeci vim ne, cum cu prompta delicata. Vix ex dicit expetendis, ne mei tale placerat urbanitas.</p>
+            </div>
+            <div class="enviar">
+                <input type="text" id="email" placeholder="Email Address">
+                <button>Notify</button>
+            </div>
+        </div>
+        <div class="video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/aJg4OJxp-co" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
     </section>
 </body>
 </html>
